# dip-analytics

./: .gitignore  .ruff.toml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pyrigthconfig.json  requirements.txt
alembic/: env.py
alembic/versions/: 2025_03_01_1024-ec13c5531d23_init_tables.py  2025_04_20_1329-6c35f0617e33_add_indexes_car_road_roadcondition.py  2025_05_08_1316-288619513aa1_added_fields_to_road_and_car_table_and_.py  2025_05_08_1404-4a985a0dc51d_added_tables_traffic_measurement_and_.py  ecf208fd0c1b_init_models.py
src/: config.py  decorators.py  enums.py  main.py  model_base.py  models.py  project_utils.py  schemas.py  utils.py
src/admin/: __init__.py
src/analitycs/: cruds.py  handlers.py  kafka_handler.py  routers.py  services.py
src/analytics/: cruds.py  handlers.py  kafka_handler.py  routers.py  services.py
src/commons/: models.py  project_protocols.py  project_utils.py  schemas.py  state.py
src/config/: __init__.py
src/services/: db.py  kafka.py
tests/: conftest.py
tests/unit/: test_analytics_services.py
