[project]
name = "dip-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiokafka==0.12.0",
    "alembic==1.14.1",
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "async-timeout==5.0.1",
    "asyncpg==0.30.0",
    "certifi==2025.1.31",
    "cfgv==3.4.0",
    "click==8.1.8",
    "distlib==0.3.9",
    "fastapi==0.115.8",
    "faststream[kafka]>=0.5.37",
    "filelock==3.17.0",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "identify==2.6.8",
    "idna==3.10",
    "loguru==0.7.3",
    "mako==1.3.9",
    "markupsafe==3.0.2",
    "nodeenv==1.9.1",
    "packaging==24.2",
    "platformdirs==4.3.6",
    "pre-commit==4.1.0",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pydantic-settings==2.8.0",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.2",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.38",
    "starlette==0.45.3",
    "typing-extensions==4.12.2",
    "uvicorn==0.34.0",
    "virtualenv==20.29.3",
]
